<resources>
    <string name="app_name">QRTSecurity</string>
    <string name="splash_message">Welcome to SAFER QRT Team</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">SignIn</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="invalid_phone_number">Please enter a valid phone number.</string>
    <string name="internet_error">Please connect to internet and try again.</string>
    <string name="general_error">Something went wrong, Please try after sometime.</string>
    <string name="invalid_password">Please enter password with minimum 6 characters.</string>
    <string name="invalid_confirm_password">Password and confirm password don\'t match.</string>
    <string name="success_login">Login successful</string>
    <string name="invalid_password_login">Please enter valid password.</string>
    <string name="complete_your_profile">Complete your profile</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender:</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_registration_number">Vehicle Reg. No.</string>
    <string name="driving_licence_number">Driving Licence No.</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="skip">Skip</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_image">Add Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="this_field_empty">This field cannot be empty.</string>
    <string name="profile_update_success">Profile updated successfully.</string>
    <string name="title_activity_activate_duty">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="duty_on">On\nDuty</string>
    <string name="duty_off">Off\nDuty</string>
    <string name="notification_message">%s is in some trouble, click here to help.</string>


    <integer name="google_play_services_version">12211000</integer>
    <string name="google_maps_key">AIzaSyAAWkSkzEDerAuQycYME0HBMGqAcI9jF_I</string>
    <string name="notification_channel_id">channel_id_qrt</string>
</resources>
