<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    android:padding="16dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/complete_your_profile"
                        android:textColor="@color/primary_text"
                        android:textSize="17sp" />

                    <RelativeLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal">

                        <com.android.volley.toolbox.NetworkImageView
                            android:id="@+id/iv_profile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/default_profile"/>

                        <ImageButton
                            android:id="@+id/btn_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/edit_icon"
                            android:background="@color/white"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:theme="@style/TextInputLayoutTheme">

                        <EditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:textColor="@color/primary_text"
                            android:textColorHint="@color/primary_text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:theme="@style/TextInputLayoutTheme">

                        <EditText
                            android:id="@+id/et_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/date_of_birth"
                            android:inputType="textPersonName"
                            android:textColor="@color/primary_text"
                            android:textColorHint="@color/primary_text" />
                    </android.support.design.widget.TextInputLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/gender"
                        android:textColor="@color/primary_text"
                        android:textSize="17sp" />

                    <RadioGroup
                        android:id="@+id/rg_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:checked="true"
                            android:textColor="@color/primary_text"
                            android:textSize="17sp" />

                        <RadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/female"
                            android:textColor="@color/primary_text"
                            android:textSize="17sp" />
                    </RadioGroup>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_vehicle_model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:theme="@style/TextInputLayoutTheme">

                        <EditText
                            android:id="@+id/et_vehicle_model"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/vehicle_model"
                            android:inputType="text"
                            android:textColor="@color/primary_text"
                            android:textColorHint="@color/primary_text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_vehicle_reg_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:theme="@style/TextInputLayoutTheme">

                        <EditText
                            android:id="@+id/et_vehicle_reg_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/vehicle_registration_number"
                            android:inputType="text"
                            android:textColor="@color/primary_text"
                            android:textColorHint="@color/primary_text" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_driving_licence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:theme="@style/TextInputLayoutTheme">

                        <EditText
                            android:id="@+id/et_driving_licence"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/driving_licence_number"
                            android:inputType="text"
                            android:textColor="@color/primary_text"
                            android:textColorHint="@color/primary_text" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btn_upload"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="10dp"
                            android:drawableLeft="@drawable/default_image"
                            android:drawablePadding="10dp"
                            android:text="@string/upload_photo"
                            android:theme="@style/PrimaryButton" />

                        <com.android.volley.toolbox.NetworkImageView
                            android:id="@+id/iv_uploaded"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/default_image" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/submit"
                        android:theme="@style/PrimaryButton" />

                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="gone" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
