<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="5dp"

        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:text="@string/enter_password"
                    android:textColor="@color/primary_text"
                    android:textSize="17sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:layout_marginTop="30dp"
                    android:theme="@style/TextInputLayoutTheme">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="phone"
                        android:textColor="@color/primary_text"
                        android:textColorHint="@color/primary_text" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="right"

                    android:padding="0dp"
                    android:text="@string/forgot_password"
                    android:theme="@style/PrimaryFlatButton" />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:text="@string/submit"
                    android:theme="@style/PrimaryButton" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="gone" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
